samples/_failures_safe/1761352206_a1472d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4cb45d82.c: In function ‘main’:
./samples/SAFE/__tmp_4cb45d82.c:153:9: error: expected declaration or statement at end of input
  153 |         fprintf(stderr, "Error: Empty filename\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_4cb45d82.c:153:9: error: expected declaration or statement at end of input
